kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nameapp
  name: nameapp
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 5000
  selector:
    app: nameapp
  type: ClusterIP
