kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: nameapp
  name: nameapp
spec:
  rules:
  - host: nameapp.tarabut.com
    http:
      paths:
      - backend:
          service:
            name: nameapp
            port:
              number: 8080
        path: /
        pathType: Prefix
